--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jobby - Job Web App</title>
+    <title>Denis - Job Web App</title>
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <link rel="stylesheet" href="/css/style.css">
 
@@ -55,7 +55,7 @@
         </div>
         <footer class="mdl-mini-footer">
             <div class="mdl-mini-footer__left-section">
-                <div class="mdl-logo">Jobby | Built with <i class="material-icons">favorite</i> by <a href="http://twitter.com/@OyetokeT">Oyetoke Toby</a></div>
+                <div class="mdl-logo">Full-stack Developer <i class="material-icons">favorite</i> by <a href="https://www.linkedin.com/in/denis-kutnar-023928155/">Denis Kutnar</a></div>
             </div>
             <div class="mdl-mini-footer__right-section">
                 <ul class="mdl-mini-footer__link-list">
