--- a/views/search.hbs
+++ b/views/search.hbs
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jobby - Job Web App</title>
+    <title>Denis - Job Web App</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
     <style>
@@ -73,9 +73,9 @@
 
             <footer class="mdl-mini-footer">
                 <div class="mdl-mini-footer__left-section">
-                    <div class="mdl-logo">Jobby | Built with
+                    <div class="mdl-logo">Full-stack Developer
                         <i class="material-icons">favorite</i>  by
-                        <a href="http://twitter.com/@OyetokeT">Oyetoke Toby</a>
+                        <a href="http://twitter.com/@OyetokeT">Denis Kutnar</a>
                     </div>
                 </div>
                 <div class="mdl-mini-footer__right-section">
